
2010-06-13  Sancho Lerena <slerena@artica.es>

	* bin/util/logevent_log4x.vbs: Fixed a small undefinition who
	makes script not working on summer time.

2010-06-08  Ramon Novoa  <rnovoa@artica.es>

	* windows/pandora_wmi.cc, modules/pandora_module_logevent.cc: Removed
	  unnecessary log information.

2010-05-27  Raul Mateos  <raulofpandora@gmail.com>

	* bin/pandora_agent.conf: Added some example. Changed
	description for Disk Free (added %). Updated build.

2010-05-19  Ramon Novoa  <rnovoa@artica.es>

	* pandora_strutils.h, modules/pandora_module_odbc.h,
	  modules/pandora_data.h, build.sh, pandora.h,
	  udp_server/udp_server.h, Makefile.am: Small fixes so the agent
	  builds under newer versions of MinGW.
	
	* installer/pandora.mpi: Updated build.

2010-05-13  Ramon Novoa  <rnovoa@artica.es>

	* pandora_windows_service.cc: Check the return codee of the tentacle
	  client. Fixes bug #2972399.

2010-05-12  Ramon Novoa  <rnovoa@artica.es>

	* build.sh: Added to repository. Pandora Agent installer build script.

2010-04-23  Sancho Lerena <slerena@artica.es>

	* bin/pandora_agent.conf: Updated sample conf with some examples of
	inventory usage, and agent plugins (commented).

	* bin/util/df.vbs, bin/util/ps.vbs: Added flush in the end of each module

	* bin/util/logevent_log4x.vbs: New agent plugin to parse eventlog and
	generate a Log4x format.

2010-04-23  Ramon Novoa  <rnovoa@artica.es>

	* modules/pandora_module_inventory.cc: Fixed a couple of XML tags.

	* installer/pandora.mpi: Added the vbs scripts to the installer.

2010-04-21  Ramon Novoa  <rnovoa@artica.es>

	* main.cc: Updated headers after tinyxml removal.
	
	* modules/pandora_module_list.cc,
	  modules/pandora_module_factory.cc: Added support for plugin modules.

	* modules/pandora_module_exec.cc, modules/pandora_module.h,
	  modules/pandora_module.cc: Added the module_timeout configuration
	  token and replaced tinyxml related code.

	* bin/pandora_agent.conf: Added a sample plugin module. Added the